--- a/components/lib/nixpacks.toml
+++ b/components/lib/nixpacks.toml
@@ -1,8 +1,11 @@
 [phases.setup]
-nixPkgs = ['...', 'yarn']
+nixPkgs = ['nodejs', 'yarn']
+
+[phases.install]
+cmds = ['yarn install']
 
 [phases.build]
-cmds = ['yarn install', 'yarn build']
+cmds = ['yarn build']
 
 [start]
 cmd = 'yarn start'
